# otvetoved

./: .env.prod.sample  .env.sample  .gitignore  README.md  compose.dev.yaml  compose.prod.yaml  compose.yaml  configure-dev.sh  configure-prod.sh  configure.bat  package-lock.json  run_project.bat  run_project.sh
app/: Dockerfile  Dockerfile.prod  pyproject.toml
app/alembic/: env.py
app/src/otvetoved_core/domain/: models.py
app/src/otvetoved_core/infrastructure/: database.py  dto.py  period.py  relational_entity.py  repo.py
app/src/otvetoved_core/main/: api.py
app/src/otvetoved_core/presentation/: api.py
app/src/otvetoved_core/presentation/api/: __init__.py  questions.py
backend/: .env.sample  Dockerfile  Dockerfile.prod  pyproject.toml
backend/alembic/versions/: 2ba4c48ff4c8_add_answer_fields_and_created_at_fields.py  645c1558197a_pavel.py  d5ec35d27ba2_add_created_at_fields.py  f213ba29a788_initial.py
backend/src/otvetoved_core/domain/models/: __init__.py  question.py  tag.py  user.py  user_session.py
backend/src/otvetoved_core/infrastructure/: config.py  dto.py
backend/src/otvetoved_core/main/: api.py
backend/src/otvetoved_core/presentation/api/: __init__.py  authentication.py  questions.py
backend/src/otvetoved_core/presentation/api/handlers/: authentication.py  question_answers.py  questions.py
backend/src/otvetoved_core/presentation/api/schemas/: schemas.py  tags_metadata.py
config/: .env.app.sample
frontend/: .env.sample  Dockerfile.prod  package.json  vite.config.js
nginx/: Dockerfile  nginx.conf  nginx.conf.sample
(+23 files in other folders)
