[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project]
name = "otvetoved-application"
version = "0.0.1"
license = {file = "LICENCE"}
dependencies = [
    "fastapi~=0.111.0",
    "psycopg[binary]",
    "dishka",
]


[project.optional-dependencies]
linter = [
    "ruff",
]


[project.scripts]
otvetoved-api = "otvetoved_core.main.api:main"
