[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project]
name = "otvetoved-application"
version = "0.0.1"
license = {file = "LICENCE"}
dependencies = [
    "dishka",
    "pydantic-settings",
    "psycopg[binary]",
    "sqlalchemy",
    "fastapi~=0.111.0",
    "alembic",
]


[project.optional-dependencies]
dev = [
    "ruff",
]


[project.scripts]
otvetoved-api = "otvetoved_core.main.api:main"
